Fix/findings on rc (#91)
* Remove validatePackage endpoint and service method

Deleted the validatePackage method from PackageService and its corresponding endpoint from PackageController. This streamlines the API by removing unused or deprecated validation functionality for uploaded ZIP files.

* Update ESMF SDK version and refactor imports

Bump esmf-sdk-version to 2.11.1 in pom.xml. Refactor imports in ModelUtils, ViolationFormatter, and ValidationUtils to use new locations for ProcessingViolation and InvalidSyntaxViolation, and update method signature in ModelUtils to use AspectModelFile.

* Refactor model file handling and validation logic

Replaces usage of StructuredModelsRoot with AspectModelLoader for file deletion. Updates validation and formatting methods to filter aspect model files by 'inmemory' source scheme instead of checking for empty source location.

* Refactor services to use CompletedFileUpload for model input

Service methods now accept CompletedFileUpload and URI instead of raw Turtle strings for aspect model input, improving file handling and consistency. Added MockFileUpload for testing, updated tests and utility methods, and enhanced model grouping logic to support filtering by aspect models.

* Remove FileWriteException and related references

Deleted the FileWriteException class and removed its usage from GlobalExceptionHandler. Also cleaned up unused code in ApplicationSettings, ModelService, ModelUtils, and refactored MockFileUpload to use a record for simplicity.

* Refactor model version handling and update URI scheme

Replaces 'inmemory' URI scheme with 'blob' throughout service and tests. Adds version field to Model, updates grouping logic to extract and assign meta model version, and refines version processing in ModelService to skip non-latest versions and improve file creation logic.

* Refactor aspect model versioning and file handling

Simplifies the process of saving aspect model files by removing the saveAspectModelFiles meth