@@ -20,6 +20,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -27,6 +28,7 @@ import java.util.Locale;
 import java.util.zip.ZipInputStream;
 
 import org.eclipse.esmf.ame.exceptions.GenerationException;
+import org.eclipse.esmf.ame.model.MockFileUpload;
 import org.eclipse.esmf.aspectmodel.generator.openapi.OpenApiSchemaGenerationConfig;
 import org.eclipse.esmf.aspectmodel.generator.openapi.PagingOption;
 
@@ -34,6 +36,8 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
+import io.micronaut.http.MediaType;
+import io.micronaut.http.multipart.CompletedFileUpload;
 import io.micronaut.test.extensions.junit5.annotation.MicronautTest;
 import jakarta.inject.Inject;
 import org.junit.jupiter.api.Test;
@@ -51,9 +55,12 @@ class GenerateServiceTest {
    @Test
    void testAspectModelHtmlDocumentation() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final byte[] payload = generateService.generateHtmlDocument( testModel, "en" );
+      final byte[] payload = generateService.generateHtmlDocument( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ),
+            "en" );
 
       assertTrue( new String( payload, StandardCharsets.UTF_8 ).contains( "<!doctype html>" ) );
    }
@@ -61,9 +68,11 @@ class GenerateServiceTest {
    @Test
    void testAspectModelJsonSample() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final String payload = generateService.sampleJSONPayload( testModel );
+      final String payload = generateService.sampleJSONPayload( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ) );
 
       final ObjectMapper mapper = new ObjectMapper();
       final JsonNode expected = mapper.readTree(
@@ -77,9 +86,11 @@ class GenerateServiceTest {
    @Test
    void testAspectModelJsonSchema() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final String payload = generateService.jsonSchema( testModel, "en-EN" );
+      final String payload = generateService.jsonSchema( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ), "en-EN" );
 
       assertTrue( payload.contains( "#/components/schemas/Coordinate" ) );
    }
@@ -87,14 +98,16 @@ class GenerateServiceTest {
    @Test
    void testAspectModelJsonOpenApiSpecWithoutResourcePath() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ),
-            false, false,
-            "https://test.com", "", new ObjectMapper().createObjectNode(), PagingOption.TIME_BASED_PAGING, false, false,
-            false, false, false, null );
+      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ), false, false,
+            "https://test.com", "", new ObjectMapper().createObjectNode(), PagingOption.TIME_BASED_PAGING, false, false, false, false,
+            false, null );
 
-      final String payload = generateService.generateJsonOpenApiSpec( testModel, config );
+      final String payload = generateService.generateJsonOpenApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ),
+            config );
 
       assertTrue( payload.contains( "\"openapi\" : \"3.0.3\"" ) );
       assertTrue( payload.contains( "\"version\" : \"v1\"" ) );
@@ -105,7 +118,9 @@ class GenerateServiceTest {
    @Test
    void testAspectModelJsonOpenApiSpecWithResourcePath() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
       final ObjectMapper objectMapper = new ObjectMapper();
       final ObjectNode jsonProperties = (ObjectNode) objectMapper.readTree( """
@@ -122,12 +137,12 @@ class GenerateServiceTest {
             }
             """ );
 
-      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ),
-            false, false,
-            "https://test.com", "/resource/{resourceId}", jsonProperties, PagingOption.TIME_BASED_PAGING, false, false,
-            false, false, false, null );
+      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ), false, false,
+            "https://test.com", "/resource/{resourceId}", jsonProperties, PagingOption.TIME_BASED_PAGING, false, false, false, false, false,
+            null );
 
-      final String payload = generateService.generateJsonOpenApiSpec( testModel, config );
+      final String payload = generateService.generateJsonOpenApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ),
+            config );
 
       assertTrue( payload.contains( "\"openapi\" : \"3.0.3\"" ) );
       assertTrue( payload.contains( "\"version\" : \"v1\"" ) );
@@ -141,7 +156,9 @@ class GenerateServiceTest {
    @Test
    void testAspectModelJsonOpenApiSpecWithWrongResourcePathProperties() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
       final ObjectMapper objectMapper = new ObjectMapper();
       final ObjectNode jsonProperties = (ObjectNode) objectMapper.readTree( """
@@ -158,25 +175,27 @@ class GenerateServiceTest {
             }
             """ );
 
-      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ),
-            false, false,
-            "https://test.com", "/resource/{resourceId}", jsonProperties, PagingOption.TIME_BASED_PAGING, false, false,
-            false, false, false, null );
+      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ), false, false,
+            "https://test.com", "/resource/{resourceId}", jsonProperties, PagingOption.TIME_BASED_PAGING, false, false, false, false, false,
+            null );
 
-      assertThrows( GenerationException.class, () -> generateService.generateJsonOpenApiSpec( testModel, config ) );
+      assertThrows( GenerationException.class,
+            () -> generateService.generateJsonOpenApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ), config ) );
    }
 
    @Test
    void testAspectModelJsonOpenApiSpecWithIncludeCrud() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ),
-            false, false,
-            "https://test.com", "", new ObjectMapper().createObjectNode(), PagingOption.TIME_BASED_PAGING, false, true,
-            false, false, false, null );
+      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ), false, false,
+            "https://test.com", "", new ObjectMapper().createObjectNode(), PagingOption.TIME_BASED_PAGING, false, true, false, false, false,
+            null );
 
-      final String payload = generateService.generateJsonOpenApiSpec( testModel, config );
+      final String payload = generateService.generateJsonOpenApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ),
+            config );
 
       assertTrue( payload.contains( "\"openapi\" : \"3.0.3\"" ) );
       assertTrue( payload.contains( "\"version\" : \"v1\"" ) );
@@ -191,14 +210,16 @@ class GenerateServiceTest {
    @Test
    void testAspectModelJsonOpenApiSpecWithIncludePost() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ),
-            false, false,
-            "https://test.com", "", new ObjectMapper().createObjectNode(), PagingOption.TIME_BASED_PAGING, false, false,
-            true, false, false, null );
+      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ), false, false,
+            "https://test.com", "", new ObjectMapper().createObjectNode(), PagingOption.TIME_BASED_PAGING, false, false, true, false, false,
+            null );
 
-      final String payload = generateService.generateJsonOpenApiSpec( testModel, config );
+      final String payload = generateService.generateJsonOpenApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ),
+            config );
 
       assertTrue( payload.contains( "\"openapi\" : \"3.0.3\"" ) );
       assertTrue( payload.contains( "\"version\" : \"v1\"" ) );
@@ -213,14 +234,16 @@ class GenerateServiceTest {
    @Test
    void testAspectModelJsonOpenApiSpecWithIncludePatch() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ),
-            false, false,
-            "https://test.com", "", new ObjectMapper().createObjectNode(), PagingOption.TIME_BASED_PAGING, false, false,
-            false, false, true, null );
+      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ), false, false,
+            "https://test.com", "", new ObjectMapper().createObjectNode(), PagingOption.TIME_BASED_PAGING, false, false, false, false, true,
+            null );
 
-      final String payload = generateService.generateJsonOpenApiSpec( testModel, config );
+      final String payload = generateService.generateJsonOpenApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ),
+            config );
 
       assertTrue( payload.contains( "\"openapi\" : \"3.0.3\"" ) );
       assertTrue( payload.contains( "\"version\" : \"v1\"" ) );
@@ -235,14 +258,16 @@ class GenerateServiceTest {
    @Test
    void testAspectModelJsonOpenApiSpecWithIncludePut() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ),
-            false, false,
-            "https://test.com", "", new ObjectMapper().createObjectNode(), PagingOption.TIME_BASED_PAGING, false, false,
-            false, true, false, null );
+      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ), false, false,
+            "https://test.com", "", new ObjectMapper().createObjectNode(), PagingOption.TIME_BASED_PAGING, false, false, false, true, false,
+            null );
 
-      final String payload = generateService.generateJsonOpenApiSpec( testModel, config );
+      final String payload = generateService.generateJsonOpenApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ),
+            config );
 
       assertTrue( payload.contains( "\"openapi\" : \"3.0.3\"" ) );
       assertTrue( payload.contains( "\"version\" : \"v1\"" ) );
@@ -257,15 +282,16 @@ class GenerateServiceTest {
    @Test
    void testAspectModelYamlOpenApiSpecWithoutResourcePath() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ),
-            false, false,
-            "https://test.com", "", new ObjectMapper( new YAMLFactory() ).createObjectNode(),
-            PagingOption.TIME_BASED_PAGING, false, false,
+      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ), false, false,
+            "https://test.com", "", new ObjectMapper( new YAMLFactory() ).createObjectNode(), PagingOption.TIME_BASED_PAGING, false, false,
             false, false, false, null );
 
-      final String payload = generateService.generateYamlOpenApiSpec( testModel, config );
+      final String payload = generateService.generateYamlOpenApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ),
+            config );
 
       assertTrue( payload.contains( "openapi: 3.0.3" ) );
       assertTrue( payload.contains( "title: movement" ) );
@@ -276,7 +302,10 @@ class GenerateServiceTest {
    @Test
    void testAspectModelYamlOpenApiSpecWithResourcePath() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
+
       final ObjectMapper objectMapper = new ObjectMapper( new YAMLFactory() );
 
       final ObjectNode yamlProperties = (ObjectNode) objectMapper.readTree( """
@@ -289,12 +318,12 @@ class GenerateServiceTest {
                          type: string
             """ );
 
-      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ),
-            false, false,
-            "https://test.com", "/resource/{resourceId}", yamlProperties, PagingOption.TIME_BASED_PAGING, false, false,
-            false, false, false, null );
+      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ), false, false,
+            "https://test.com", "/resource/{resourceId}", yamlProperties, PagingOption.TIME_BASED_PAGING, false, false, false, false, false,
+            null );
 
-      final String payload = generateService.generateYamlOpenApiSpec( testModel, config );
+      final String payload = generateService.generateYamlOpenApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ),
+            config );
 
       assertTrue( payload.contains( "openapi: 3.0.3" ) );
       assertTrue( payload.contains( "title: movement" ) );
@@ -308,7 +337,10 @@ class GenerateServiceTest {
    @Test
    void testAspectModelYamlOpenApiSpecWithWrongResourcePathProperties() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
+
       final ObjectMapper objectMapper = new ObjectMapper( new YAMLFactory() );
 
       final ObjectNode yamlProperties = (ObjectNode) objectMapper.readTree( """
@@ -321,26 +353,27 @@ class GenerateServiceTest {
                          type: string
             """ );
 
-      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ),
-            false, false,
-            "https://test.com", "/resource/{resourceId}", yamlProperties, PagingOption.TIME_BASED_PAGING, false, false,
-            false, false, false, null );
+      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ), false, false,
+            "https://test.com", "/resource/{resourceId}", yamlProperties, PagingOption.TIME_BASED_PAGING, false, false, false, false, false,
+            null );
 
-      assertThrows( GenerationException.class, () -> generateService.generateYamlOpenApiSpec( testModel, config ) );
+      assertThrows( GenerationException.class,
+            () -> generateService.generateYamlOpenApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ), config ) );
    }
 
    @Test
    void testAspectModelYamlOpenApiSpecWithIncludeCrud() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ),
-            false, false,
-            "https://test.com", "", new ObjectMapper( new YAMLFactory() ).createObjectNode(),
-            PagingOption.TIME_BASED_PAGING, false, true,
+      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ), false, false,
+            "https://test.com", "", new ObjectMapper( new YAMLFactory() ).createObjectNode(), PagingOption.TIME_BASED_PAGING, false, true,
             false, false, false, null );
 
-      final String payload = generateService.generateYamlOpenApiSpec( testModel, config );
+      final String payload = generateService.generateYamlOpenApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ),
+            config );
 
       assertTrue( payload.contains( "openapi: 3.0.3" ) );
       assertTrue( payload.contains( "title: movement" ) );
@@ -355,15 +388,16 @@ class GenerateServiceTest {
    @Test
    void testAspectModelYamlOpenApiSpecWithIncludePost() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ),
-            false, false,
-            "https://test.com", "", new ObjectMapper( new YAMLFactory() ).createObjectNode(),
-            PagingOption.TIME_BASED_PAGING, false, false,
+      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ), false, false,
+            "https://test.com", "", new ObjectMapper( new YAMLFactory() ).createObjectNode(), PagingOption.TIME_BASED_PAGING, false, false,
             true, false, false, null );
 
-      final String payload = generateService.generateYamlOpenApiSpec( testModel, config );
+      final String payload = generateService.generateYamlOpenApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ),
+            config );
 
       assertTrue( payload.contains( "openapi: 3.0.3" ) );
       assertTrue( payload.contains( "title: movement" ) );
@@ -378,15 +412,16 @@ class GenerateServiceTest {
    @Test
    void testAspectModelYamlOpenApiSpecWithIncludePatch() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ),
-            false, false,
-            "https://test.com", "", new ObjectMapper( new YAMLFactory() ).createObjectNode(),
-            PagingOption.TIME_BASED_PAGING, false, false,
+      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ), false, false,
+            "https://test.com", "", new ObjectMapper( new YAMLFactory() ).createObjectNode(), PagingOption.TIME_BASED_PAGING, false, false,
             false, false, true, null );
 
-      final String payload = generateService.generateYamlOpenApiSpec( testModel, config );
+      final String payload = generateService.generateYamlOpenApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ),
+            config );
 
       assertTrue( payload.contains( "openapi: 3.0.3" ) );
       assertTrue( payload.contains( "title: movement" ) );
@@ -401,15 +436,16 @@ class GenerateServiceTest {
    @Test
    void testAspectModelYamlOpenApiSpecWithIncludePut() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ),
-            false, false,
-            "https://test.com", "", new ObjectMapper( new YAMLFactory() ).createObjectNode(),
-            PagingOption.TIME_BASED_PAGING, false, false,
+      final OpenApiSchemaGenerationConfig config = new OpenApiSchemaGenerationConfig( Locale.forLanguageTag( "en" ), false, false,
+            "https://test.com", "", new ObjectMapper( new YAMLFactory() ).createObjectNode(), PagingOption.TIME_BASED_PAGING, false, false,
             false, true, false, null );
 
-      final String payload = generateService.generateYamlOpenApiSpec( testModel, config );
+      final String payload = generateService.generateYamlOpenApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ),
+            config );
 
       assertTrue( payload.contains( "openapi: 3.0.3" ) );
       assertTrue( payload.contains( "title: movement" ) );
@@ -424,9 +460,11 @@ class GenerateServiceTest {
    @Test
    void testAspectModelAASX() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final String payload = generateService.generateAASXFile( testModel );
+      final String payload = generateService.generateAASXFile( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ) );
 
       assertTrue( payload.contains( "aasx" ) );
    }
@@ -434,9 +472,11 @@ class GenerateServiceTest {
    @Test
    void testAspectModelAASXml() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final String payload = generateService.generateAasXmlFile( testModel );
+      final String payload = generateService.generateAasXmlFile( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ) );
 
       assertTrue( payload.contains( "<?xml version='1.0' encoding='UTF-8'?>" ) );
       assertTrue( payload.contains( "https://admin-shell.io/aas/3/0" ) );
@@ -445,9 +485,11 @@ class GenerateServiceTest {
    @Test
    void testAspectModelAASJson() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final String payload = generateService.generateAasJsonFile( testModel );
+      final String payload = generateService.generateAasJsonFile( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ) );
 
       assertTrue( payload.contains( "{" ) );
       assertTrue( payload.contains( "}" ) );
@@ -458,11 +500,13 @@ class GenerateServiceTest {
    @Test
    void testAspectModelJsonAsyncApiSpec() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
       final String payload = new String(
-            generateService.generateAsyncApiSpec( testModel, "en", "json", "application:id", "foo/bar", false, false ),
-            StandardCharsets.UTF_8 );
+            generateService.generateAsyncApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ), "en", "json",
+                  "application:id", "foo/bar", false, false ), StandardCharsets.UTF_8 );
 
       assertTrue( payload.contains( "\"asyncapi\" : \"3.0.0\"" ) );
       assertTrue( payload.contains( "\"id\" : \"application:id\"" ) );
@@ -475,10 +519,12 @@ class GenerateServiceTest {
    @Test
    void testAspectModelJsonAsyncApiSpecWithSeparateFiles() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final byte[] payload = generateService.generateAsyncApiSpec( testModel, "en", "json", "application:id", "foo/bar",
-            false, true );
+      final byte[] payload = generateService.generateAsyncApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ), "en",
+            "json", "application:id", "foo/bar", false, true );
 
       assertTrue( isValidZipFile( payload ) );
    }
@@ -486,11 +532,13 @@ class GenerateServiceTest {
    @Test
    void testAspectModelYAMLAsyncApiSpec() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
       final String payload = new String(
-            generateService.generateAsyncApiSpec( testModel, "en", "yaml", "application:id", "foo/bar", false, false ),
-            StandardCharsets.UTF_8 );
+            generateService.generateAsyncApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ), "en", "yaml",
+                  "application:id", "foo/bar", false, false ), StandardCharsets.UTF_8 );
 
       assertTrue( payload.contains( "asyncapi: 3.0.0" ) );
       assertTrue( payload.contains( "id: application:id" ) );
@@ -503,10 +551,12 @@ class GenerateServiceTest {
    @Test
    void testAspectModelYAMLAsyncApiSpecWithSeparateFiles() throws IOException {
       final Path storagePath = Path.of( eclipseTestPath.toString(), model );
-      final String testModel = Files.readString( storagePath, StandardCharsets.UTF_8 );
+      final byte[] testModelForService = Files.readAllBytes( storagePath );
+      final CompletedFileUpload mockedZipFile = new MockFileUpload( "TestArchive.ttl", testModelForService,
+            MediaType.of( MediaType.MULTIPART_FORM_DATA ) );
 
-      final byte[] payload = generateService.generateAsyncApiSpec( testModel, "en", "yaml", "application:id", "foo/bar",
-            false, true );
+      final byte[] payload = generateService.generateAsyncApiSpec( mockedZipFile, URI.create( "blob:///" + toUriPath( storagePath ) ), "en",
+            "yaml", "application:id", "foo/bar", false, true );
 
       assertTrue( isValidZipFile( payload ) );
    }
@@ -517,5 +567,13 @@ class GenerateServiceTest {
       } catch ( final IOException e ) {
          return false;
       }
+   }
+
+   public String toUriPath( final Path path ) {
+      String uriPath = path.toString();
+      if ( System.getProperty( "os.name" ).toLowerCase().contains( "win" ) ) {
+         uriPath = uriPath.replace( "\\", "/" );
+      }
+      return uriPath;
    }
 }
